--- a/index.html
+++ b/index.html
@@ -21,7 +21,30 @@
     </header>
     <main>
       <section>
-        <form></form>
+        <form id="form">
+          <label for="userName">
+            Skriv brukernavn..
+            <input name="userName" type="text" placeholder="Skriv brukernavn..">
+          </label>
+          <br>
+          <br>
+          <br>
+
+          <!-- 
+            Oppgave: Sett opp en label/input til epost og en label/input til passord
+          -->
+          <label for="userEpost">
+            Skriv inn epost..
+            <input type="email" name="userEpost" placeholder="Eks. olanordmann@hotmail.com">
+          </label>
+
+          <label for="userPassword">
+            Skriv inn passord..
+            <input type="password" name="userPassword" placeholder="Eks. Olanordmann123">
+          </label>
+
+          <input type="submit" value="Logg inn" id="submitButton">
+        </form>
       </section>
     </main>
     <footer>
